# Packing

./: CMakeLists.txt  CMakeLists.txt.user.8148901.20  README.md  tasko_paieska_cilindre.txt
Json_launch_files/: Cube.json  Cylinder.json  Mesh.json
PADANGA_INIT/: GeometryPadangaSphere.vtk  PADANGA_21280.vtk  PADANGA_25935.vtk  PADANGA_40877.vtk  SpheresInitPacking.vtk  config.json
PADANGA_INIT/LIBS/: libical.so.1  libicalss.so.1  libicalvcal.so.1
PADANGA_INIT/Packing-BUILD/: CMakeCache.txt  Makefile  MathTests  Packing  cmake_install.cmake
Packing-build/: CMakeCache.txt  Cylinder.json  Makefile  MathTests  Packing.cbp  cmake_install.cmake  cube1_var2.vtk  cube2_var1.vtk  cube2_var4.vtk  cube3_var2.vtk  cube3_var5.vtk  cylinder_mesh.vtk  rezultatai.vtk  tempINfo_shapes.txt  variantai.json
Test_cases/: .~lock.testai.ods#  Cylinder_var1.vtk  cube1_var1.vtk  cube1_var3.vtk  cube1_var4.vtk  cube2_var2.vtk  cube2_var3.vtk  cube3_var1.vtk  cube3_var3.vtk  cube3_var4.vtk  testai.ods
rolandas@vanagas.vgtu.lt/Boundaries/: BBoundaries.cxx  BoundariesFactory.cxx  BoundariesShape.cxx  CubeShape.cxx  CubeShape.h  Mesh.cpp  Mesh.h  cylindershape.cpp  cylindershape.h
rolandas@vanagas.vgtu.lt/IO/: Writer.cxx  Writer.h
rolandas@vanagas.vgtu.lt/algorithm/: AAlgorithm.cxx  AAlgorithm.h  AlgorithmFactory.cxx  SpherePackingAlgorithm.cxx
rolandas@vanagas.vgtu.lt/app/: MathTests.cxx  main.cxx
rolandas@vanagas.vgtu.lt/core/: Check_json.h  Constants.h  Data.cxx  Math.cxx  Math.h  Point.h  time.h
rolandas@vanagas.vgtu.lt/random/: ARandom.h  RandomDiscrete.cxx  RandomDiscrete.h  RandomFactory.cxx  RandomFactory.h  RandomUniform.cxx  RandomUniform.h
rolandas@vanagas.vgtu.lt/search/: ASearch.cxx  ASearch.h  SearchFactory.cxx  SearchFactory.h  SearchUnform.cxx  SearchUnform.h
src/Boundaries/: BBoundaries.cxx  BBoundaries.h  BoundariesFactory.h  BoundariesShape.cxx  BoundariesShape.h  CubeShape.cxx  CubeShape.h  Mesh.cpp  Mesh.h  cylindershape.cpp  cylindershape.h
src/IO/: Reader.cxx  Reader.h  Writer.cxx  Writer.cxx.autosave  Writer.h
src/algorithm/: AAlgorithm.cxx  AAlgorithm.h  AlgorithmFactory.cxx  AlgorithmFactory.h  MeshPackingAlgorithm.cxx  MeshPackingAlgorithm.h  SpherePackingAlgorithm.cxx  SpherePackingAlgorithm.h
src/app/: MathTests.cxx  main.cxx
src/core/: Check_json.cxx  Constants.h  Data.cxx  Data.h  Math.cxx  Math.h  Point.cxx  Point.cxx.autosave  Point.h  Point.h.autosave  json_reader.h
src/random/: ARandom.cxx  ARandom.h  RandomDiscrete.cxx  RandomDiscrete.h  RandomFactory.cxx  RandomFactory.h  RandomUniform.cxx  RandomUniform.h
src/search/: ASearch.cxx  ASearch.h  SearchFactory.cxx  SearchFactory.h  SearchUnform.cxx  SearchUnform.h
